# local_mcp_server-client_EAG-S-4

./: .gitignore  README.md  mcp_client.py  mcp_server.py  pyproject.toml
