[project]
name = "local-mcp-server-client-eag-s-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.9.0",
    "mcp[cli]>=1.6.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
